kubernetes/glpi-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: glpi
  labels: 
    app: glpi
spec:
  ports: 
    - port: 8080
      targetPort: 80
  selector: 
    app: glpi
  type: NodePort
